Add dark mode plots

--- a/python/mensa_occupancy.ipynb
+++ b/python/mensa_occupancy.ipynb
@@ -9,7 +9,6 @@
     "import os, sys, json, pandas\n",
     "from datetime import datetime, timedelta, time\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
     "from typing import Dict\n",
     "\n",
     "filepath = os.path.join(sys.path[0], \"..\", \"src\", \"assets\", \"rooms.json\")\n",
@@ -96,20 +95,24 @@
     "frame = pandas.DataFrame(events_list, columns=[\"Uhrzeit\", \"Anzahl Kurse in Mittagspause\"]).set_index(\"Uhrzeit\")\n",
     "# Style plot\n",
     "plt.style.use('seaborn')\n",
-    "ax = frame.plot(kind=\"bar\", rot=0)\n",
+    "ax = frame.plot(kind=\"bar\", rot=0, color='#4C72B0')\n",
+    "figure = ax.get_figure()\n",
+    "ax.set_facecolor('#EAEAF2')\n",
+    "ax.get_figure().set_facecolor('white')\n",
     "ax.set_ylabel(\"Anzahl Kurse\", fontsize=16, fontweight='bold')\n",
     "ax.set_xlabel(\"Uhrzeit\", fontsize=16, fontweight='bold')\n",
     "ax.yaxis.grid(True, which='major', linestyle='-', linewidth=2)\n",
     "ax.xaxis.grid(False)\n",
-    "ax.legend(fontsize=\"medium\")\n",
+    "legend = ax.legend(fontsize=\"large\", frameon=True, framealpha=1)\n",
+    "legend.get_frame().set_linewidth(0.0)\n",
     "ax.set_ylim(top=max(y_series) + 4)\n",
-    "# Add bar values\n",
-    "for i, v in enumerate(y_series):\n",
-    "    ax.text(i, v + 1, str(v), color='tab:blue', fontweight='bold', ha='center')\n",
     "# Set x tick labels\n",
     "ax.tick_params(axis='both', which='major', labelsize=10)\n",
     "ax.set_xticklabels([date.strftime(\"%H:%M\") for date in x_series])\n",
-    "pass"
+    "# Add bar values\n",
+    "props = dict(facecolor='#EAEAF2', alpha=1, edgecolor='none')\n",
+    "for i, v in enumerate(y_series):\n",
+    "    ax.text(i, v + 1, str(v), color='tab:blue', fontweight='bold', ha='center', fontsize=12, alpha=1, bbox=props)\n"
    ]
   },
   {
@@ -119,7 +122,47 @@
    "outputs": [],
    "source": [
     "# Export plot\n",
-    "ax.get_figure().savefig(\"test.png\", bbox_inches='tight', dpi=200)"
+    "figure.savefig(\"mensa_light.png\", bbox_inches='tight', dpi=200, facecolor=figure.get_facecolor(), edgecolor='none')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create plot\n",
+    "frame = pandas.DataFrame(events_list, columns=[\"Uhrzeit\", \"Anzahl Kurse in Mittagspause\"]).set_index(\"Uhrzeit\")\n",
+    "# Style plot\n",
+    "plt.style.use('dark_background')\n",
+    "ax = frame.plot(kind=\"bar\", rot=0, color='#7957d5')\n",
+    "figure = ax.get_figure()\n",
+    "ax.set_facecolor('#282828')\n",
+    "ax.get_figure().set_facecolor('#282828')\n",
+    "ax.set_ylabel(\"Anzahl Kurse\", fontsize=16, fontweight='bold')\n",
+    "ax.set_xlabel(\"Uhrzeit\", fontsize=16, fontweight='bold')\n",
+    "ax.yaxis.grid(True, which='major', linestyle='-', linewidth=0.5)\n",
+    "ax.xaxis.grid(False)\n",
+    "legend = ax.legend(fontsize=\"large\", frameon=True, facecolor='#282828', framealpha=1)\n",
+    "legend.get_frame().set_linewidth(0.0)\n",
+    "ax.set_ylim(top=max(y_series) + 4)\n",
+    "# Set x tick labels\n",
+    "ax.tick_params(axis='both', which='major', labelsize=10)\n",
+    "ax.set_xticklabels([date.strftime(\"%H:%M\") for date in x_series])\n",
+    "# Add bar values\n",
+    "props = dict(facecolor='#282828', alpha=1, edgecolor='none')\n",
+    "for i, v in enumerate(y_series):\n",
+    "    ax.text(i, v + 1, str(v), color='#E39031', fontweight='bold', ha='center', fontsize=12, alpha=1, bbox=props)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export plot\n",
+    "figure.savefig(\"mensa_dark.png\", bbox_inches='tight', dpi=200, facecolor=figure.get_facecolor(), edgecolor='none')"
    ]
   }
  ],
