Add mean and max lines

--- a/python/mensa_occupancy.ipynb
+++ b/python/mensa_occupancy.ipynb
@@ -6,14 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, json, pandas\n",
+    "import os\n",
+    "import sys\n",
+    "import json\n",
+    "import pandas\n",
     "from datetime import datetime, timedelta, time\n",
     "import matplotlib.pyplot as plt\n",
     "from typing import Dict\n",
+    "from statistics import mean, median\n",
+    "import numpy as np\n",
     "\n",
     "filepath = os.path.join(sys.path[0], \"..\", \"src\", \"assets\", \"rooms.json\")\n",
     "with open(filepath) as f:\n",
-    "    data = json.load(f)"
+    "    data = json.load(f)\n"
    ]
   },
   {
@@ -31,11 +36,12 @@
     "    \"\"\"\n",
     "    roundTo = dateDelta.total_seconds()\n",
     "\n",
-    "    if dt == None : dt = datetime.datetime.now()\n",
+    "    if dt == None:\n",
+    "        dt = datetime.datetime.now()\n",
     "    seconds = (dt - dt.min).seconds\n",
     "    # // is a floor division, not a comment on following line:\n",
     "    rounding = (seconds+roundTo/2) // roundTo * roundTo\n",
-    "    return dt + timedelta(0,rounding-seconds,-dt.microsecond)"
+    "    return dt + timedelta(0, rounding-seconds, -dt.microsecond)\n"
    ]
   },
   {
@@ -44,15 +50,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def zerofill(dates: Dict[datetime, int], delta: timedelta = timedelta(minutes=15)):\n",
+    "def zerofill(course_values: Dict[datetime, int], delta: timedelta = timedelta(minutes=15), date: datetime = datetime.today()):\n",
     "    '''Fills a sorted date: value dict with zeros if there are gaps in the specified delta.'''\n",
-    "    min_date, max_date = min(dates.keys()), max(dates.keys())\n",
+    "    min_date = date.replace(hour=11, minute=0, second=0, microsecond=0)\n",
+    "    max_date = min_date.replace(hour=14)\n",
     "    curr_date = min_date\n",
-    "    while curr_date < max_date:\n",
-    "        if not dates.get(curr_date, None):\n",
-    "            dates[curr_date] = 0\n",
+    "    while curr_date <= max_date:\n",
+    "        if not course_values.get(curr_date, None):\n",
+    "            course_values[curr_date] = 0\n",
     "        curr_date += delta\n",
-    "    return dates"
+    "    return course_values\n"
    ]
   },
   {
@@ -70,7 +77,7 @@
     "        end = roundTime(datetime.strptime(event[\"end\"], \"%Y-%m-%dT%H:%M:%SZ\"))\n",
     "        if end.time() >= time(11) and end.time() < time(14):\n",
     "            for date in [end, end + timedelta(minutes=15), end + timedelta(minutes=30)]:\n",
-    "                if end.hour >= 14:\n",
+    "                if date.hour >= 14:\n",
     "                    continue\n",
     "                if events.get(date, None):\n",
     "                    events[date] += 1\n",
@@ -79,7 +86,7 @@
     "# Zerofill events dict\n",
     "events = zerofill(events)\n",
     "# Build sorted events list\n",
-    "events_list = sorted(list(events.items()), key=lambda e: e[0])"
+    "events_list = sorted(list(events.items()), key=lambda e: e[0])\n"
    ]
   },
   {
@@ -88,60 +95,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def createFigure(events, **kwargs):\n",
+    "def calculate_compare_values():\n",
+    "    mensa_occ = []\n",
+    "    # Go though each event and count courses\n",
+    "    for event_date in data[\"events_by_date\"]:\n",
+    "        events = {}\n",
+    "        for room_events in data[\"events_by_date\"][event_date].values():\n",
+    "            for event in room_events:\n",
+    "                end = roundTime(datetime.strptime(\n",
+    "                    event[\"end\"], \"%Y-%m-%dT%H:%M:%SZ\"))\n",
+    "                if end.time() >= time(11) and end.time() < time(14):\n",
+    "                    for date in [end, end + timedelta(minutes=15), end + timedelta(minutes=30)]:\n",
+    "                        if end.hour >= 14:\n",
+    "                            continue\n",
+    "                        if events.get(date, None):\n",
+    "                            events[date] += 1\n",
+    "                        else:\n",
+    "                            events[date] = 1\n",
+    "        # Zerofill events dict\n",
+    "        events = zerofill(\n",
+    "            events, date=datetime.strptime(event_date, \"%d.%m.%Y\"))\n",
+    "        # Build sorted events list\n",
+    "        events_list = sorted(list(events.items()), key=lambda e: e[0])\n",
+    "\n",
+    "        # Skip days with less than 2 courses\n",
+    "        if any([v for _, v in events_list]):\n",
+    "            mensa_occ.append(events_list)\n",
+    "\n",
+    "    # Strip dates and put course counts together indexed by time\n",
+    "    hour_values = {hour[0][0].time(): [count for _, count in hour]\n",
+    "                   for hour in zip(*mensa_occ)}\n",
+    "    # Calculate mean of course counts\n",
+    "    hour_mean = {hour: mean(count) for hour, count in hour_values.items()}\n",
+    "    hour_max = {hour: max(count) for hour, count in hour_values.items()}\n",
+    "\n",
+    "    return [('3-Monate-Durchschnitt', hour_mean), ('3-Monate-Maximum', hour_max)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_values = calculate_compare_values()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_figure(events, line_values, options):\n",
+    "    # Join bar and line chart data\n",
+    "    chart_values = [entry + tuple(line[1][entry[0].time()]\n",
+    "                                  for line in line_values) for entry in events]\n",
+    "    # Create x and y series for bar chart\n",
     "    y_series = [v for _, v in events]\n",
     "    x_series = [k for k, _ in events]\n",
-    "    # Create plot\n",
-    "    frame = pandas.DataFrame(events, columns=[\n",
-    "                                \"Uhrzeit\", \"Anzahl Kurse in Mittagspause\"]).set_index(\"Uhrzeit\")\n",
+    "    # Create pandas dataframe\n",
+    "    frame = pandas.DataFrame(chart_values, columns=[\n",
+    "                             \"Uhrzeit\", \"Anzahl Kurse in Mittagspause\",\n",
+    "                             *[line[0] for line in line_values]])\n",
+    "    frame.set_index(\"Uhrzeit\")\n",
     "    # Style plot\n",
-    "    plt.style.use(kwargs[\"theme\"])\n",
-    "    ax = frame.plot(kind=\"bar\", rot=0, color=kwargs[\"bar_color\"])\n",
-    "    figure = ax.get_figure()\n",
-    "    figure.suptitle(f'Mensaauslastung am {date.today().strftime(\"%d.%m.%Y\")}', fontsize=16)\n",
-    "    figure.set_facecolor(kwargs[\"figure_bg\"])\n",
-    "    ax.set_facecolor(kwargs[\"grid_bg\"])\n",
-    "    ax.get_figure().set_facecolor(kwargs[\"grid_bg\"])\n",
+    "    plt.style.use('seaborn') # Base theme\n",
+    "    plt.style.use(options[\"theme\"])\n",
+    "    figure, ax = plt.subplots()\n",
+    "    # Plot bar chart\n",
+    "    frame[\"Anzahl Kurse in Mittagspause\"].plot(\n",
+    "        kind=\"bar\", rot=0, color=options[\"bar_color\"], use_index=False)\n",
+    "    # Plot line charts on top\n",
+    "    for description, _ in line_values:\n",
+    "        frame[description].plot(\n",
+    "            kind='line', color=options[description], ms=10, use_index=False)\n",
+    "    figure.suptitle(\n",
+    "        f'Mensaauslastung am {date.today().strftime(\"%d.%m.%Y\")}', fontsize=16)\n",
+    "    figure.set_facecolor(options[\"figure_bg\"])\n",
+    "    ax.set_facecolor(options[\"grid_bg\"])\n",
+    "    ax.get_figure().set_facecolor(options[\"grid_bg\"])\n",
     "    ax.set_ylabel(\"Anzahl Kurse\", fontsize=16, fontweight='bold')\n",
     "    ax.set_xlabel(\"Uhrzeit\", fontsize=16, fontweight='bold')\n",
     "    ax.yaxis.grid(True, which='major', linestyle='-',\n",
-    "                    linewidth=kwargs[\"grid_linewidth\"])\n",
+    "                  linewidth=options[\"grid_linewidth\"])\n",
     "    ax.xaxis.grid(False)\n",
     "    legend = ax.legend(fontsize=\"large\", frameon=True,\n",
-    "                        facecolor=kwargs[\"grid_bg\"], framealpha=1)\n",
+    "                       facecolor=options[\"grid_bg\"], framealpha=1)\n",
     "    legend.get_frame().set_linewidth(0.0)\n",
-    "    ax.set_ylim(top=max(y_series) + 4)\n",
+    "    #ax.set_ylim(top=max(y_series) + 4)\n",
+    "    # Set y ticks distance\n",
+    "    start, end = ax.get_ylim()\n",
+    "    ax.yaxis.set_ticks(np.arange(start, end, 5))\n",
+    "\n",
     "    # Set x tick labels\n",
     "    ax.tick_params(axis='both', which='major', labelsize=10)\n",
     "    ax.set_xticklabels([date.strftime(\"%H:%M\") for date in x_series])\n",
     "    # Add bar values\n",
-    "    props = dict(facecolor=kwargs[\"grid_bg\"], alpha=1, edgecolor='none')\n",
+    "    props = dict(facecolor=options[\"grid_bg\"], alpha=1, edgecolor='none')\n",
     "    for i, v in enumerate(y_series):\n",
-    "        ax.text(i, v + 1, str(v), color=kwargs[\"text_color\"],\n",
-    "                fontweight='bold', ha='center', fontsize=12, alpha=1, bbox=props)\n",
-    "    figure.savefig(kwargs[\"filename\"], bbox_inches='tight', dpi=200,\n",
-    "                       facecolor=figure.get_facecolor(), edgecolor='none')\n",
-    "    return figure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export light chart\n",
-    "options = {\n",
-    "    \"theme\": \"seaborn\",\n",
-    "    \"figure_bg\": \"white\",\n",
-    "    \"grid_bg\": \"#EAEAF2\",\n",
-    "    \"grid_linewidth\": 2,\n",
-    "    \"bar_color\": \"#4C72B0\",\n",
-    "    \"text_color\": \"tab:blue\",\n",
-    "    \"filename\": \"mensa_light.png\",\n",
-    "}\n",
-    "# Export plot\n",
-    "figure = createFigure(events_list, **options)"
+    "        ax.text(i, v + 1, str(v), color=options[\"text_color\"],\n",
+    "                fontweight='bold', ha='center', fontsize=12, alpha=1, bbox=props, zorder=1)\n",
+    "    # Save figure\n",
+    "    figure.savefig(options[\"filename\"], bbox_inches='tight', dpi=200,\n",
+    "                   facecolor=figure.get_facecolor(), edgecolor='none')\n",
+    "    return figure\n"
    ]
   },
   {
@@ -158,10 +216,35 @@
     "    \"grid_linewidth\": 0.5,\n",
     "    \"bar_color\": \"#7957d5\",\n",
     "    \"text_color\": \"#E39031\",\n",
+    "    \"3-Monate-Durchschnitt\": \"#7957d5\",\n",
+    "    \"3-Monate-Maximum\": \"#787878\",\n",
     "    \"filename\": \"mensa_dark.png\",\n",
     "}\n",
     "# Export plot\n",
-    "figure = createFigure(events_list, **options)"
+    "figure = create_figure(events_list, line_values, options)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export light chart\n",
+    "options = {\n",
+    "    \"theme\": \"seaborn\",\n",
+    "    \"figure_bg\": \"white\",\n",
+    "    \"grid_bg\": \"#EAEAF2\",\n",
+    "    \"grid_linewidth\": 2,\n",
+    "    \"bar_color\": \"#4C72B0\",\n",
+    "    \"text_color\": \"tab:blue\",\n",
+    "    \"3-Monate-Durchschnitt\": \"blue\",\n",
+    "    \"3-Monate-Maximum\": \"red\",\n",
+    "    \"filename\": \"mensa_light.png\",\n",
+    "}\n",
+    "# Export plot\n",
+    "figure = create_figure(events_list, line_values, options)\n",
+    "plt.show()\n"
    ]
   }
  ],
@@ -184,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
