Functionize raw code

--- a/python/mensa_occupancy.ipynb
+++ b/python/mensa_occupancy.ipynb
@@ -10,7 +10,7 @@
     "import sys\n",
     "import json\n",
     "import pandas\n",
-    "from datetime import datetime, timedelta, time\n",
+    "from datetime import datetime, timedelta, time, date\n",
     "import matplotlib.pyplot as plt\n",
     "from typing import Dict\n",
     "from statistics import mean, median\n",
@@ -50,9 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def zerofill(course_values: Dict[datetime, int], delta: timedelta = timedelta(minutes=15), date: datetime = datetime.today()):\n",
+    "def zerofill(course_values: Dict[datetime, int], delta: timedelta = timedelta(minutes=15), fill_date = datetime.today()):\n",
     "    '''Fills a sorted date: value dict with zeros if there are gaps in the specified delta.'''\n",
-    "    min_date = date.replace(hour=11, minute=0, second=0, microsecond=0)\n",
+    "    min_date = fill_date.replace(hour=11, minute=0, second=0, microsecond=0)\n",
     "    max_date = min_date.replace(hour=14)\n",
     "    curr_date = min_date\n",
     "    while curr_date <= max_date:\n",
@@ -68,25 +68,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export lunch time schedule\n",
-    "today = datetime.today().strftime(\"%d.%m.%Y\")\n",
-    "events = {}\n",
-    "# Go though each event and count courses\n",
-    "for room_events in data[\"events_by_date\"][today].values():\n",
-    "    for event in room_events:\n",
-    "        end = roundTime(datetime.strptime(event[\"end\"], \"%Y-%m-%dT%H:%M:%SZ\"))\n",
-    "        if end.time() >= time(11) and end.time() < time(14):\n",
-    "            for date in [end, end + timedelta(minutes=15), end + timedelta(minutes=30)]:\n",
-    "                if date.hour >= 14:\n",
-    "                    continue\n",
-    "                if events.get(date, None):\n",
-    "                    events[date] += 1\n",
-    "                else:\n",
-    "                    events[date] = 1\n",
-    "# Zerofill events dict\n",
-    "events = zerofill(events)\n",
-    "# Build sorted events list\n",
-    "events_list = sorted(list(events.items()), key=lambda e: e[0])\n"
+    "def calculate_mensa_occ(search_date):\n",
+    "    search_date_obj = datetime.strptime(search_date, \"%d.%m.%Y\")\n",
+    "    # Export lunch time schedule\n",
+    "    time_values = {}\n",
+    "    # Go though each event and count courses\n",
+    "    for room_events in data[\"events_by_date\"][search_date].values():\n",
+    "        for event in room_events:\n",
+    "            end = roundTime(datetime.strptime(event[\"end\"], \"%Y-%m-%dT%H:%M:%SZ\"))\n",
+    "            if end.time() >= time(11) and end.time() < time(14):\n",
+    "                for lunch_time in [end, end + timedelta(minutes=15), end + timedelta(minutes=30)]:\n",
+    "                    if lunch_time.hour >= 14:\n",
+    "                        continue\n",
+    "                    if time_values.get(lunch_time, None):\n",
+    "                        time_values[lunch_time] += 1\n",
+    "                    else:\n",
+    "                        time_values[lunch_time] = 1\n",
+    "    # Zerofill time_values dict\n",
+    "    time_values = zerofill(time_values, fill_date=search_date_obj)\n",
+    "    # Convert datetime to time\n",
+    "    time_values = {lunch_time.time(): value for lunch_time, value in time_values.items()}\n",
+    "    # Build sorted time_values list\n",
+    "    time_values_list = sorted(list(time_values.items()), key=lambda e: e[0])\n",
+    "    return time_values_list\n"
    ]
   },
   {
@@ -95,41 +99,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_compare_values():\n",
-    "    mensa_occ = []\n",
+    "def calculate_chart_data():\n",
+    "    mensa_occ = {}\n",
     "    # Go though each event and count courses\n",
     "    for event_date in data[\"events_by_date\"]:\n",
-    "        events = {}\n",
-    "        for room_events in data[\"events_by_date\"][event_date].values():\n",
-    "            for event in room_events:\n",
-    "                end = roundTime(datetime.strptime(\n",
-    "                    event[\"end\"], \"%Y-%m-%dT%H:%M:%SZ\"))\n",
-    "                if end.time() >= time(11) and end.time() < time(14):\n",
-    "                    for date in [end, end + timedelta(minutes=15), end + timedelta(minutes=30)]:\n",
-    "                        if end.hour >= 14:\n",
-    "                            continue\n",
-    "                        if events.get(date, None):\n",
-    "                            events[date] += 1\n",
-    "                        else:\n",
-    "                            events[date] = 1\n",
-    "        # Zerofill events dict\n",
-    "        events = zerofill(\n",
-    "            events, date=datetime.strptime(event_date, \"%d.%m.%Y\"))\n",
-    "        # Build sorted events list\n",
-    "        events_list = sorted(list(events.items()), key=lambda e: e[0])\n",
+    "        time_values_list = calculate_mensa_occ(event_date)\n",
     "\n",
     "        # Skip days with less than 2 courses\n",
-    "        if any([v for _, v in events_list]):\n",
-    "            mensa_occ.append(events_list)\n",
+    "        if any([v for _, v in time_values_list]):\n",
+    "            mensa_occ[event_date] = time_values_list\n",
     "\n",
     "    # Strip dates and put course counts together indexed by time\n",
-    "    hour_values = {hour[0][0].time(): [count for _, count in hour]\n",
-    "                   for hour in zip(*mensa_occ)}\n",
+    "    hour_values = {hour[0][0]: [count for _, count in hour]\n",
+    "                   for hour in zip(*mensa_occ.values())}\n",
     "    # Calculate mean of course counts\n",
     "    hour_mean = {hour: mean(count) for hour, count in hour_values.items()}\n",
     "    hour_max = {hour: max(count) for hour, count in hour_values.items()}\n",
     "\n",
-    "    return [('3-Monate-Durchschnitt', hour_mean), ('3-Monate-Maximum', hour_max)]\n"
+    "    return mensa_occ, [('3-Monate-Durchschnitt', hour_mean), ('3-Monate-Maximum', hour_max)]\n"
    ]
   },
   {
@@ -138,18 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_values = calculate_compare_values()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_figure(events, line_values, options):\n",
+    "def create_figure(date_str, events, line_values, options):\n",
     "    # Join bar and line chart data\n",
-    "    chart_values = [entry + tuple(line[1][entry[0].time()]\n",
+    "    chart_values = [entry + tuple(line[1][entry[0]]\n",
     "                                  for line in line_values) for entry in events]\n",
     "    # Create x and y series for bar chart\n",
     "    y_series = [v for _, v in events]\n",
@@ -170,8 +148,7 @@
     "    for description, _ in line_values:\n",
     "        frame[description].plot(\n",
     "            kind='line', color=options[description], ms=10, use_index=False)\n",
-    "    figure.suptitle(\n",
-    "        f'Mensaauslastung am {date.today().strftime(\"%d.%m.%Y\")}', fontsize=16)\n",
+    "    figure.suptitle(f'Mensaauslastung am {date_str}', fontsize=16)\n",
     "    figure.set_facecolor(options[\"figure_bg\"])\n",
     "    ax.set_facecolor(options[\"grid_bg\"])\n",
     "    ax.get_figure().set_facecolor(options[\"grid_bg\"])\n",
@@ -183,7 +160,9 @@
     "    legend = ax.legend(fontsize=\"large\", frameon=True,\n",
     "                       facecolor=options[\"grid_bg\"], framealpha=1)\n",
     "    legend.get_frame().set_linewidth(0.0)\n",
-    "    #ax.set_ylim(top=max(y_series) + 4)\n",
+    "    # Set max y axis value\n",
+    "    max_value = max(max(max(line[1].values()) for line in line_values), max(y_series))\n",
+    "    ax.set_ylim(top=max_value + 4)\n",
     "    # Set y ticks distance\n",
     "    start, end = ax.get_ylim()\n",
     "    ax.yaxis.set_ticks(np.arange(start, end, 5))\n",
@@ -197,7 +176,7 @@
     "        ax.text(i, v + 1, str(v), color=options[\"text_color\"],\n",
     "                fontweight='bold', ha='center', fontsize=12, alpha=1, bbox=props, zorder=1)\n",
     "    # Save figure\n",
-    "    figure.savefig(options[\"filename\"], bbox_inches='tight', dpi=200,\n",
+    "    figure.savefig(f\"mensa_occ_{date_str}.png\", bbox_inches='tight', dpi=200,\n",
     "                   facecolor=figure.get_facecolor(), edgecolor='none')\n",
     "    return figure\n"
    ]
@@ -220,31 +199,11 @@
     "    \"3-Monate-Maximum\": \"#787878\",\n",
     "    \"filename\": \"mensa_dark.png\",\n",
     "}\n",
-    "# Export plot\n",
-    "figure = create_figure(events_list, line_values, options)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export light chart\n",
-    "options = {\n",
-    "    \"theme\": \"seaborn\",\n",
-    "    \"figure_bg\": \"white\",\n",
-    "    \"grid_bg\": \"#EAEAF2\",\n",
-    "    \"grid_linewidth\": 2,\n",
-    "    \"bar_color\": \"#4C72B0\",\n",
-    "    \"text_color\": \"tab:blue\",\n",
-    "    \"3-Monate-Durchschnitt\": \"blue\",\n",
-    "    \"3-Monate-Maximum\": \"red\",\n",
-    "    \"filename\": \"mensa_light.png\",\n",
-    "}\n",
-    "# Export plot\n",
-    "figure = create_figure(events_list, line_values, options)\n",
-    "plt.show()\n"
+    "# Get chart data\n",
+    "mensa_occ, line_values = calculate_chart_data()\n",
+    "# Export plots\n",
+    "for date_str in mensa_occ:\n",
+    "    create_figure(date_str, mensa_occ[date_str], line_values, options)\n"
    ]
   }
  ],
