--- a/python/mensa_occupancy.ipynb
+++ b/python/mensa_occupancy.ipynb
@@ -160,9 +160,6 @@
     "    legend = ax.legend(fontsize=\"large\", frameon=True,\n",
     "                       facecolor=options[\"grid_bg\"], framealpha=1)\n",
     "    legend.get_frame().set_linewidth(0.0)\n",
-    "    # Set max y axis value\n",
-    "    max_value = max(max(max(line[1].values()) for line in line_values), max(y_series))\n",
-    "    ax.set_ylim(top=max_value + 4)\n",
     "    # Set y ticks distance\n",
     "    start, end = ax.get_ylim()\n",
     "    ax.yaxis.set_ticks(np.arange(start, end, 5))\n",
@@ -176,7 +173,8 @@
     "        ax.text(i, v + 1, str(v), color=options[\"text_color\"],\n",
     "                fontweight='bold', ha='center', fontsize=12, alpha=1, bbox=props, zorder=1)\n",
     "    # Save figure\n",
-    "    figure.savefig(f\"mensa_occ_{date_str}.png\", bbox_inches='tight', dpi=200,\n",
+    "    day, month, year = date_str.split(\".\")\n",
+    "    figure.savefig(f\"mensa_charts/mensa_occ_{year}-{month}-{day}.png\", bbox_inches='tight', dpi=200,\n",
     "                   facecolor=figure.get_facecolor(), edgecolor='none')\n",
     "    return figure\n"
    ]
@@ -203,8 +201,18 @@
     "mensa_occ, line_values = calculate_chart_data()\n",
     "# Export plots\n",
     "for date_str in mensa_occ:\n",
-    "    create_figure(date_str, mensa_occ[date_str], line_values, options)\n"
+    "    figure = create_figure(date_str, mensa_occ[date_str], line_values, options)\n",
+    "    plt.close(figure)\n",
+    "\n",
+    "print(\"Finished\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
