--- a/python/mensa_occupancy.ipynb
+++ b/python/mensa_occupancy.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def roundTime(dt: datetime = None, dateDelta: timedelta = timedelta(minutes=15)) -> datetime:\n",
+    "def round_time(dt: datetime = None, dateDelta: timedelta = timedelta(minutes=15)) -> datetime:\n",
     "    \"\"\"Round a datetime object to a multiple of a timedelta\n",
     "    dt : datetime.datetime object, default now.\n",
     "    dateDelta : timedelta object, we round to a multiple of this, default 1 minute.\n",
@@ -75,7 +75,7 @@
     "    # Go though each event and count courses\n",
     "    for room_events in data[\"events_by_date\"][search_date].values():\n",
     "        for event in room_events:\n",
-    "            end = roundTime(datetime.strptime(event[\"end\"], \"%Y-%m-%dT%H:%M:%SZ\"))\n",
+    "            end = round_time(datetime.strptime(event[\"end\"], \"%Y-%m-%dT%H:%M:%SZ\"))\n",
     "            if end.time() >= time(11) and end.time() < time(14):\n",
     "                for lunch_time in [end, end + timedelta(minutes=15), end + timedelta(minutes=30)]:\n",
     "                    if lunch_time.hour >= 14:\n",
@@ -105,7 +105,7 @@
     "    for event_date in data[\"events_by_date\"]:\n",
     "        time_values_list = calculate_mensa_occ(event_date)\n",
     "\n",
-    "        # Skip days with less than 2 courses\n",
+    "        # Skip days with 0 courses\n",
     "        if any([v for _, v in time_values_list]):\n",
     "            mensa_occ[event_date] = time_values_list\n",
     "\n",
